implemented redis cache

--- a/DocumentService.Api/appsettings.json
+++ b/DocumentService.Api/appsettings.json
@@ -6,7 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=DocProcessing;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=DocProcessing;Trusted_Connection=True;TrustServerCertificate=True",
+    "Redis": "redis-16458.crce179.ap-south-1-1.ec2.cloud.redislabs.com:16458,password=dzL5TfAcYaQNlY26NkCkZM0tEbo7U08m,user=default,abortConnect=false"
+  },
+  "Redis": {
+    "InstanceName": "docsvc:"
   },
   "AllowedHosts": "*"
 }
